# rust-lc3-as

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: testing.yml
Examples/: 2048.asm  Compare.asm  Compare.hex  Compare.lst  Features.asm  Features.hex  Features.lst  Features.sym  Fibonacci.asm  Fibonacci.hex  Fibonacci.lst  Fibonacci.sym  LC3_OS.asm  Multi_Word_Addition.lst  PRNG.sym  Q4.asm  Recursive_Fibonacci.asm  Recursive_Fibonacci.hex  Recursive_Fibonacci.lst  Test.asm  data4.asm  guessing_game.hex  guessing_game.lst  guessing_game.sym  include.h  include2.h  input.asm  input.hex  input.lst  input.sym  lc3os.asm
benches/: bench.rs
src/: assembler.rs  lib.rs  macros.rs  parser.rs  types.rs  writer.rs
src/assembler/: mod.rs
src/lexer/: mod.rs  tokenizer.rs
src/lexer/tokenizer/: mod.rs
src/notifier/: diagnostic.rs  mod.rs
src/notifier/diagnostic/: mod.rs
src/parser/: mod.rs
src/token/: macros.rs  mod.rs  symbol.rs  token_type.rs  type.rs
src/token/macros/: mod.rs
src/token/tokens/: _in.rs  add.rs  and.rs  binary.rs  blkw.rs  br.rs  character.rs  decimal.rs  end.rs  fill.rs  getc.rs  halt.rs  hexadecimal.rs  immediate.rs  in.rs  include.rs  jmp.rs  jmpt.rs  jsr.rs  jsrr.rs  label.rs  ld.rs  ldi.rs  ldr.rs  lea.rs  lshift.rs  macros.rs  mod.rs  neg.rs  not.rs  orig.rs  out.rs  puts.rs  putsp.rs  register.rs  ret.rs  rti.rs  set.rs  st.rs  sti.rs  (+6 more)
src/token/tokens/macros/: mod.rs
src/token/tokens/traits/: mod.rs
tests/: test.rs
