[package]
name = "rust_lc3"
version = "0.1.0"
authors = ["Josh Hill <josh.hill189@gmail.com>"]

[lib]
name = "lc3lib"
path = "src/lib.rs"

[[bin]]
name = "lc3as"
path = "bin/main.rs"

[dependencies]
colored = "^1.9.0"
clap = "^2.33.0"
lazy_static = "1.4.0"

[profile.release]
lto = true

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "bench"
harness = false
