cargo-features = ["strip"]

[package]
name = "lc3-rs"
version = "0.1.0"
authors = ["Josh Hill <josh@pyxxilated.studio>"]

[lib]
name = "lc3lib"
path = "src/lib.rs"

[[bin]]
name = "lc3as"
path = "bin/main.rs"

[dependencies]
colored = "^2.0.0"
clap = "^2.33.0"
lazy_static = "1.4.0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase (better optimization, slower build)
codegen-units = 1
# optimization for size
opt-level = 's'
# link time optimization using using whole-program analysis
lto = "thin"
strip = "symbols"

[dev-dependencies]
criterion = "^0.3"

[[bench]]
name = "bench"
harness = false
